catkin_ws/logs/iq_gnc/build.make.243.log.stderr
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp: In function ‘void drone1_gpsSub_cb(const GlobalPositionTarget&)’:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:181:53: error: no match for ‘operator*’ (operand type is ‘const GlobalPositionTarget’ {aka ‘const mavros_msgs::GlobalPositionTarget_<std::allocator<void> >’})
  181 |   mavros_msgs::GlobalPositionTarget& drone1_gps_g = *msg;
      |                                                     ^~~~
In file included from /usr/include/boost/config/no_tr1/complex.hpp:21,
                 from /usr/include/boost/math/policies/error_handling.hpp:17,
                 from /usr/include/boost/math/special_functions/round.hpp:14,
                 from /opt/ros/noetic/include/ros/time.h:58,
                 from /opt/ros/noetic/include/ros/serialization.h:34,
                 from /home/mario/catkin_ws/devel/include/mavros_msgs/CommandTOLRequest.h:14,
                 from /home/mario/catkin_ws/devel/include/mavros_msgs/CommandTOL.h:11,
                 from /home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:1,
                 from /home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:3:
/usr/include/c++/9/complex:391:5: note: candidate: ‘template<class _Tp> std::complex<_Tp> std::operator*(const std::complex<_Tp>&, const std::complex<_Tp>&)’
  391 |     operator*(const complex<_Tp>& __x, const complex<_Tp>& __y)
      |     ^~~~~~~~
/usr/include/c++/9/complex:391:5: note:   template argument deduction/substitution failed:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:181:54: note:   ‘const GlobalPositionTarget’ {aka ‘const mavros_msgs::GlobalPositionTarget_<std::allocator<void> >’} is not derived from ‘const std::complex<_Tp>’
  181 |   mavros_msgs::GlobalPositionTarget& drone1_gps_g = *msg;
      |                                                      ^~~
In file included from /usr/include/boost/config/no_tr1/complex.hpp:21,
                 from /usr/include/boost/math/policies/error_handling.hpp:17,
                 from /usr/include/boost/math/special_functions/round.hpp:14,
                 from /opt/ros/noetic/include/ros/time.h:58,
                 from /opt/ros/noetic/include/ros/serialization.h:34,
                 from /home/mario/catkin_ws/devel/include/mavros_msgs/CommandTOLRequest.h:14,
                 from /home/mario/catkin_ws/devel/include/mavros_msgs/CommandTOL.h:11,
                 from /home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:1,
                 from /home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:3:
/usr/include/c++/9/complex:400:5: note: candidate: ‘template<class _Tp> std::complex<_Tp> std::operator*(const std::complex<_Tp>&, const _Tp&)’
  400 |     operator*(const complex<_Tp>& __x, const _Tp& __y)
      |     ^~~~~~~~
/usr/include/c++/9/complex:400:5: note:   template argument deduction/substitution failed:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:181:54: note:   ‘const GlobalPositionTarget’ {aka ‘const mavros_msgs::GlobalPositionTarget_<std::allocator<void> >’} is not derived from ‘const std::complex<_Tp>’
  181 |   mavros_msgs::GlobalPositionTarget& drone1_gps_g = *msg;
      |                                                      ^~~
In file included from /usr/include/boost/config/no_tr1/complex.hpp:21,
                 from /usr/include/boost/math/policies/error_handling.hpp:17,
                 from /usr/include/boost/math/special_functions/round.hpp:14,
                 from /opt/ros/noetic/include/ros/time.h:58,
                 from /opt/ros/noetic/include/ros/serialization.h:34,
                 from /home/mario/catkin_ws/devel/include/mavros_msgs/CommandTOLRequest.h:14,
                 from /home/mario/catkin_ws/devel/include/mavros_msgs/CommandTOL.h:11,
                 from /home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:1,
                 from /home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:3:
/usr/include/c++/9/complex:409:5: note: candidate: ‘template<class _Tp> std::complex<_Tp> std::operator*(const _Tp&, const std::complex<_Tp>&)’
  409 |     operator*(const _Tp& __x, const complex<_Tp>& __y)
      |     ^~~~~~~~
/usr/include/c++/9/complex:409:5: note:   template argument deduction/substitution failed:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:181:54: note:   candidate expects 2 arguments, 1 provided
  181 |   mavros_msgs::GlobalPositionTarget& drone1_gps_g = *msg;
      |                                                      ^~~
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp: In function ‘int main(int, char**)’:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:247:7: error: ‘drone1_gps_sub’ was not declared in this scope; did you mean ‘drone1_pos_cb’?
  247 |       drone1_gps_sub = gnc_node.subscribe<mavros_msgs::GlobalPositionTarget>("/drone1/mavros/setpoint_position/global", 10, drone1_gpsSub_cb);
      |       ^~~~~~~~~~~~~~
      |       drone1_pos_cb
In file included from /usr/include/boost/function/detail/maybe_include.hpp:22,
                 from /usr/include/boost/function/detail/function_iterate.hpp:14,
                 from /usr/include/boost/preprocessor/iteration/detail/iter/forward1.hpp:53,
                 from /usr/include/boost/function.hpp:71,
                 from /opt/ros/noetic/include/ros/forwards.h:40,
                 from /opt/ros/noetic/include/ros/common.h:37,
                 from /opt/ros/noetic/include/ros/ros.h:43,
                 from /home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:9,
                 from /home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:3:
/usr/include/boost/function/function_template.hpp: In instantiation of ‘static void boost::detail::function::void_function_invoker1<FunctionPtr, R, T0>::invoke(boost::detail::function::function_buffer&, T0) [with FunctionPtr = void (*)(const mavros_msgs::GlobalPositionTarget_<std::allocator<void> >&); R = void; T0 = const boost::shared_ptr<const mavros_msgs::GlobalPositionTarget_<std::allocator<void> > >&]’:
/usr/include/boost/function/function_template.hpp:931:38:   required from ‘void boost::function1<R, T1>::assign_to(Functor) [with Functor = void (*)(const mavros_msgs::GlobalPositionTarget_<std::allocator<void> >&); R = void; T0 = const boost::shared_ptr<const mavros_msgs::GlobalPositionTarget_<std::allocator<void> > >&]’
/usr/include/boost/function/function_template.hpp:720:7:   required from ‘boost::function1<R, T1>::function1(Functor, typename boost::enable_if_<(! boost::is_integral<Functor>::value), int>::type) [with Functor = void (*)(const mavros_msgs::GlobalPositionTarget_<std::allocator<void> >&); R = void; T0 = const boost::shared_ptr<const mavros_msgs::GlobalPositionTarget_<std::allocator<void> > >&; typename boost::enable_if_<(! boost::is_integral<Functor>::value), int>::type = int]’
/usr/include/boost/function/function_template.hpp:1068:16:   required from ‘boost::function<R(T0)>::function(Functor, typename boost::enable_if_<(! boost::is_integral<Functor>::value), int>::type) [with Functor = void (*)(const mavros_msgs::GlobalPositionTarget_<std::allocator<void> >&); R = void; T0 = const boost::shared_ptr<const mavros_msgs::GlobalPositionTarget_<std::allocator<void> > >&; typename boost::enable_if_<(! boost::is_integral<Functor>::value), int>::type = int]’
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:247:141:   required from here
/usr/include/boost/function/function_template.hpp:117:11: error: invalid initialization of reference of type ‘const mavros_msgs::GlobalPositionTarget_<std::allocator<void> >&’ from expression of type ‘const boost::shared_ptr<const mavros_msgs::GlobalPositionTarget_<std::allocator<void> > >’
  117 |           BOOST_FUNCTION_RETURN(f(BOOST_FUNCTION_ARGS));
      |           ^~~~~~~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/follower_sub.dir/build.make:63: CMakeFiles/follower_sub.dir/src/follower_sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1891: CMakeFiles/follower_sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
